# Taiwan-100-Peaks-Dashboard

./: PROJECT_CONTEXT.md.md  PROJECT_CONTEXT_Taiwan_100_Peaks_Codex.md  Taiwan's 100 Peaks.xlsx  allpass_db.xlsx  hiking_note_scraper.py  project_context.md  sdd-beginner-tutorial.md
taiwan-100-peaks-dashboard/: .dockerignore  .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  docker-compose.yml
taiwan-100-peaks-dashboard/backend/: Dockerfile  alembic.ini  pyproject.toml
taiwan-100-peaks-dashboard/backend/alembic/: env.py  script.py.mako
taiwan-100-peaks-dashboard/backend/alembic/versions/: 20260708_0001_create_mountains_and_hiking_records_tables.py
taiwan-100-peaks-dashboard/backend/app/: database.py  main.py  models.py  schemas.py
taiwan-100-peaks-dashboard/backend/app/routers/: __init__.py  dashboard.py  mountains.py  peaks.py  stats.py
taiwan-100-peaks-dashboard/backend/scripts/: seed_database.py
taiwan-100-peaks-dashboard/crawler/: crawler.py  data_cleaning.py  hiking_note_scraper.py  load_to_db.py  pyproject.toml
taiwan-100-peaks-dashboard/db/: init.sql  seed.sql
taiwan-100-peaks-dashboard/frontend/: Dockerfile  index.html
taiwan-100-peaks-dashboard/frontend/css/: style.css
taiwan-100-peaks-dashboard/frontend/js/: app.js  dashboard.js  map.js
