[project]
name = "taiwan-100-peaks-backend"
version = "0.1.0"
description = "FastAPI backend for Taiwan 100 Peaks Dashboard"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.2",
]
