[project]
name = "taiwan-100-peaks-crawler"
version = "0.1.0"
description = "HikingNote crawler environment for Taiwan 100 Peaks Dashboard"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]
